--- a/EverywhereHouseController/res/layout/forgot_password_dialog.xml
+++ b/EverywhereHouseController/res/layout/forgot_password_dialog.xml
@@ -12,7 +12,8 @@
         android:ems="10"
         android:hint="User"
         android:lines="1"
-        android:singleLine="true" >
+        android:singleLine="true"
+        android:textSize="25sp" >
 
         <requestFocus />
     </EditText>
@@ -25,7 +26,8 @@
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:lines="1"
-        android:singleLine="true" />
+        android:singleLine="true"
+        android:textSize="25sp" />
 
     <RelativeLayout
         android:id="@+id/RelativeLayout1"
@@ -35,11 +37,11 @@
 
         <Button
             android:id="@+id/SendButton"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:layout_marginRight="30dp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/button_config"
             android:text="Send"
             android:textColor="@drawable/button_text_color2"
@@ -47,11 +49,11 @@
 
         <Button
             android:id="@+id/ExitButton"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="30dp"
+            android:layout_marginLeft="10dp"
             android:background="@drawable/button_config"
             android:text="Exit"
             android:textColor="@drawable/button_text_color2"
