--- a/EverywhereHouseController/res/layout-small/create_event_dialog.xml
+++ b/EverywhereHouseController/res/layout-small/create_event_dialog.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="30dp"
         android:background="@color/Black" >
 
         <TextView
@@ -22,11 +22,6 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="30dp" >
-    </RelativeLayout>
-
     <EditText
         android:id="@+id/event_name"
         android:layout_width="wrap_content"
@@ -34,7 +29,8 @@
         android:layout_gravity="center_horizontal"
         android:ems="10"
         android:hint="@string/event_name"
-        android:singleLine="true" />
+        android:singleLine="true"
+        android:textSize="20sp" />
 
     <Spinner
         android:id="@+id/sp_item"
@@ -66,7 +62,7 @@
         android:background="@drawable/button_config"
         android:text="Select date"
         android:textColor="@drawable/button_text_color2"
-        android:textSize="20sp" />
+        android:textSize="10sp" />
 
     <TextView
         android:id="@+id/tv_time"
@@ -86,7 +82,7 @@
         android:background="@drawable/button_config"
         android:text="Select time"
         android:textColor="@drawable/button_text_color2"
-        android:textSize="20sp" />
+        android:textSize="15sp" />
 
     <RelativeLayout
         android:id="@+id/RelativeLayout1"
