--- a/EverywhereHouseController/res/layout/items_view.xml
+++ b/EverywhereHouseController/res/layout/items_view.xml
@@ -15,8 +15,9 @@
             android:id="@+id/textRoom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:gravity="center_vertical"
             android:text="TextView"
             android:textColor="@color/White"
             android:textSize="30sp" />
