--- a/EverywhereHouseController/res/layout-small/create_user.xml
+++ b/EverywhereHouseController/res/layout-small/create_user.xml
@@ -1,25 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:fillViewport="true" >
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/GreenApp" >
+        xmlns:android="http://schemas.android.com/apk/res/android"
+    	android:layout_width="fill_parent"
+    	android:layout_height="fill_parent"
+        android:background="@color/GreenApp"
+        android:orientation="vertical"  >
 
         <RelativeLayout
-            android:id="@+id/RelativeLayout1"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_above="@+id/linearLayout1"
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginBottom="15dp"
-            android:layout_weight="3.69"
-            android:background="@color/Black"
-            android:orientation="vertical" >
+            android:layout_alignParentRight="true"
+            android:background="@color/Black" >
 
             <TextView
                 android:id="@+id/textView1"
@@ -33,24 +26,14 @@
 
         </RelativeLayout>
 
-        <RelativeLayout
-            android:id="@+id/RelativeLayout01"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_weight="3.69"
-            android:background="@color/Black"
-            android:orientation="vertical" >
-        </RelativeLayout>
-
         <LinearLayout
+            android:id="@+id/linearLayout1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:background="@color/White"
+            android:background="@color/GreenApp"
             android:orientation="vertical" >
 
             <EditText
@@ -61,7 +44,6 @@
                 android:hint="User"
                 android:singleLine="true"
                 android:textColor="@color/Black"
-                android:textColorHint="@color/DarkGray"
                 android:textSize="20sp" />
 
             <EditText
@@ -72,7 +54,6 @@
                 android:hint="Email"
                 android:singleLine="true"
                 android:textColor="@color/Black"
-                android:textColorHint="@color/DarkGray"
                 android:textSize="20sp" />
 
             <EditText
@@ -85,7 +66,6 @@
                 android:password="true"
                 android:singleLine="true"
                 android:textColor="@color/Black"
-                android:textColorHint="@color/DarkGray"
                 android:textSize="20sp" />
 
             <EditText
@@ -98,27 +78,15 @@
                 android:password="true"
                 android:singleLine="true"
                 android:textColor="@color/Black"
-                android:textColorHint="@color/DarkGray"
                 android:textSize="20sp" />
         </LinearLayout>
 
         <Button
-            android:id="@+id/newUserCancel"
-            android:layout_width="140dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignTop="@+id/newUserConfirm"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/button_config"
-            android:text="Exit"
-            android:textColor="@drawable/button_text_color2"
-            android:textSize="20sp" />
-
-        <Button
             android:id="@+id/newUserConfirm"
             android:layout_width="140dp"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/RelativeLayout01"
+            android:layout_height="40dp"
+            android:layout_alignBaseline="@+id/newUserCancel"
+            android:layout_alignBottom="@+id/newUserCancel"
             android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"
             android:background="@drawable/button_config"
@@ -126,6 +94,17 @@
             android:textColor="@drawable/button_text_color2"
             android:textSize="20sp" />
 
-    </RelativeLayout>
+        <Button
+            android:id="@+id/newUserCancel"
+            android:layout_width="140dp"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/button_config"
+            android:text="Exit"
+            android:textColor="@drawable/button_text_color2"
+            android:textSize="20sp" />
 
-</ScrollView>
+    </RelativeLayout>
