--- a/EverywhereHouseController/res/layout-large/main_menu_view.xml
+++ b/EverywhereHouseController/res/layout-large/main_menu_view.xml
@@ -25,12 +25,12 @@
 
 	        <RelativeLayout
 	            android:layout_width="match_parent"
-	            android:layout_height="400dp" >
+	            android:layout_height="359dp" >
 
 	            <ImageView
 	                android:id="@+id/world_loading_view"
 	                android:layout_width="300dp"
-	                android:layout_height="220dp"
+	                android:layout_height="180dp"
 	                android:layout_centerHorizontal="true"
 	                android:layout_marginTop="25dp"
 	                android:src="@drawable/world_ehc" />
@@ -38,7 +38,7 @@
 	            <ImageView
 	                android:id="@+id/word_ehc"
 	                android:layout_width="300dp"
-	                android:layout_height="220dp"
+	                android:layout_height="180dp"
 	                android:layout_centerHorizontal="true"
 	                android:layout_marginTop="30dp"
 	                android:src="@drawable/word_ehc" />
@@ -98,27 +98,16 @@
 
 	        <RelativeLayout
 	            android:layout_width="match_parent"
-	            android:layout_height="match_parent" >
-
-	            <Button
-	                android:id="@+id/buttonProfile"
-	                android:layout_width="240dp"
-	                android:layout_height="100dp"
-	                android:layout_alignLeft="@+id/buttonEvents"
-	                android:layout_alignParentRight="true"
-	                android:layout_alignTop="@+id/buttonConfig"
-	                android:background="@drawable/button_config2"
-	                android:text="Profile"
-	                android:textColor="@drawable/button_text_color3"
-	                android:textSize="40sp" />
+	            android:layout_height="match_parent"
+	            android:layout_marginTop="30dp" >
 
 	            <Button
 	                android:id="@+id/buttonManagement"
 	                android:layout_width="wrap_content"
-	                android:layout_height="100dp"
+	                android:layout_height="80dp"
 	                android:layout_alignParentLeft="true"
+	                android:layout_alignParentRight="true"
 	                android:layout_alignParentTop="true"
-	                android:layout_marginTop="72dp"
 	                android:background="@drawable/button_config2"
 	                android:text="Management"
 	                android:textColor="@drawable/button_text_color3"
@@ -127,10 +116,10 @@
 	            <Button
 	                android:id="@+id/buttonConfig"
 	                android:layout_width="wrap_content"
-	                android:layout_height="100dp"
+	                android:layout_height="80dp"
+	                android:layout_alignParentBottom="true"
 	                android:layout_alignParentLeft="true"
-	                android:layout_below="@+id/buttonManagement"
-	                android:layout_marginTop="18dp"
+	                android:layout_alignParentRight="true"
 	                android:background="@drawable/button_config2"
 	                android:text="Configuration"
 	                android:textColor="@drawable/button_text_color3"
@@ -139,9 +128,10 @@
 	            <Button
 	                android:id="@+id/buttonEvents"
 	                android:layout_width="240dp"
-	                android:layout_height="100dp"
+	                android:layout_height="80dp"
+	                android:layout_alignParentLeft="true"
 	                android:layout_alignParentRight="true"
-	                android:layout_alignTop="@+id/buttonManagement"
+	                android:layout_centerVertical="true"
 	                android:background="@drawable/button_config2"
 	                android:text="Tasks"
 	                android:textColor="@drawable/button_text_color3"
