--- a/EverywhereHouseController/res/layout-large/profile_view.xml
+++ b/EverywhereHouseController/res/layout-large/profile_view.xml
@@ -13,15 +13,44 @@
     android:background="@color/GreenApp"
     android:orientation="vertical" >
 
-    <ImageButton
-        android:id="@+id/UserImage"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="43dp"
+    <RelativeLayout
+        android:id="@+id/RelativeLayout1"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:background="@color/GreenApp"
-        android:src="@drawable/user_icon" />
+        android:orientation="vertical" >
+
+        <Button
+            android:id="@+id/profileExit"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/button_config"
+            android:onClick="onClickButton"
+            android:text="Exit"
+            android:textColor="@drawable/button_text_color2"
+            android:textSize="40sp" />
+
+        <Button
+            android:id="@+id/profileSave"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
+            android:layout_alignBaseline="@+id/profileExit"
+            android:layout_alignBottom="@+id/profileExit"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/button_config"
+            android:onClick="onClickButton"
+            android:text="Save"
+            android:textColor="@drawable/button_text_color2"
+            android:textSize="40sp" />
+
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -29,7 +58,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/UserImage"
-        android:layout_marginTop="27dp"
         android:orientation="vertical" >
 
         <TextView
@@ -50,7 +78,10 @@
             android:gravity="center_vertical|center_horizontal"
             android:singleLine="true"
             android:textColor="@color/Black"
-            android:textSize="30sp" />
+            android:textSize="30sp" >
+
+            <requestFocus />
+        </EditText>
 
         <TextView
             android:id="@+id/textView2"
@@ -94,44 +125,15 @@
             android:textSize="30sp" />
     </LinearLayout>
 
-    <RelativeLayout
-        android:id="@+id/RelativeLayout1"
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
+    <ImageButton
+        android:id="@+id/UserImage"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="28dp"
         android:background="@color/GreenApp"
-        android:orientation="vertical" >
-
-        <Button
-            android:id="@+id/profileExit"
-            android:layout_width="200dp"
-            android:layout_height="60dp"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/button_config"
-            android:onClick="onClickButton"
-            android:text="Exit"
-            android:textColor="@drawable/button_text_color2"
-            android:textSize="40sp" />
-
-        <Button
-            android:id="@+id/profileSave"
-            android:layout_width="200dp"
-            android:layout_height="60dp"
-            android:layout_alignBaseline="@+id/profileExit"
-            android:layout_alignBottom="@+id/profileExit"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/button_config"
-            android:onClick="onClickButton"
-            android:text="Save"
-            android:textColor="@drawable/button_text_color2"
-            android:textSize="40sp" />
-
-    </RelativeLayout>
+        android:src="@drawable/user_icon" />
 
 </RelativeLayout>
 	<ListView
