--- a/EverywhereHouseController/res/layout-small/profile_view.xml
+++ b/EverywhereHouseController/res/layout-small/profile_view.xml
@@ -23,13 +23,50 @@
         android:background="@color/GreenApp"
         android:src="@drawable/user_icon" />
 
+    <RelativeLayout
+        android:id="@+id/RelativeLayout1"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:background="@color/GreenApp"
+        android:orientation="vertical" >
+
+        <Button
+            android:id="@+id/profileExit"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/button_config"
+            android:onClick="onClickButton"
+            android:text="Exit"
+            android:textColor="@drawable/button_text_color2"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/profileSave"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/button_config"
+            android:onClick="onClickButton"
+            android:text="Save"
+            android:textColor="@drawable/button_text_color2"
+            android:textSize="20sp" />
+
+    </RelativeLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/UserImage"
-        android:layout_marginTop="27dp"
         android:orientation="vertical" >
 
         <TextView
@@ -50,7 +87,10 @@
             android:gravity="center_vertical|center_horizontal"
             android:singleLine="true"
             android:textColor="@color/Black"
-            android:textSize="20sp" />
+            android:textSize="20sp" >
+
+            <requestFocus />
+        </EditText>
 
         <TextView
             android:id="@+id/textView2"
@@ -93,44 +133,6 @@
             android:textColor="@color/Black"
             android:textSize="20sp" />
     </LinearLayout>
-
-    <RelativeLayout
-        android:id="@+id/RelativeLayout1"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:background="@color/GreenApp"
-        android:orientation="vertical" >
-
-        <Button
-            android:id="@+id/profileExit"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/button_config"
-            android:onClick="onClickButton"
-            android:text="Exit"
-            android:textColor="@drawable/button_text_color2"
-            android:textSize="20sp" />
-
-        <Button
-            android:id="@+id/profileSave"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/button_config"
-            android:onClick="onClickButton"
-            android:text="Save"
-            android:textColor="@drawable/button_text_color2"
-            android:textSize="20sp" />
-
-    </RelativeLayout>
 
 </RelativeLayout>
 	<ListView
