--- a/EverywhereHouseController/res/layout/create_user.xml
+++ b/EverywhereHouseController/res/layout/create_user.xml
@@ -1,23 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:fillViewport="true" >
-
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/GreenApp" >
-
-        <RelativeLayout
-            android:id="@+id/RelativeLayout1"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+    	android:layout_width="fill_parent"
+    	android:layout_height="fill_parent"
+        android:background="@color/GreenApp"
+        android:orientation="vertical"  >
+	
+         <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_weight="3.69"
-            android:background="@color/Black"
-            android:orientation="vertical" >
+            android:layout_alignParentRight="true"
+            android:background="@color/Black" >
 
             <TextView
                 android:id="@+id/textView1"
@@ -28,19 +22,9 @@
                 android:text="New user"
                 android:textColor="@color/White"
                 android:textSize="30sp" />
-        </RelativeLayout>
 
-        <RelativeLayout
-            android:id="@+id/RelativeLayout01"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_weight="3.69"
-            android:background="@color/Black"
-            android:orientation="vertical" >
         </RelativeLayout>
-
+        
         <LinearLayout
             android:id="@+id/linearLayout1"
             android:layout_width="wrap_content"
@@ -48,7 +32,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:background="@color/White"
+            android:background="@color/GreenApp"
             android:orientation="vertical" >
 
             <EditText
@@ -59,7 +43,6 @@
                 android:hint="User"
                 android:singleLine="true"
                 android:textColor="@color/Black"
-                android:textColorHint="@color/DarkGray"
                 android:textSize="25sp" >
 
                 <requestFocus />
@@ -73,7 +56,6 @@
                 android:hint="Email"
                 android:singleLine="true"
                 android:textColor="@color/Black"
-                android:textColorHint="@color/DarkGray"
                 android:textSize="25sp" />
 
             <EditText
@@ -86,7 +68,6 @@
                 android:password="true"
                 android:singleLine="true"
                 android:textColor="@color/Black"
-                android:textColorHint="@color/DarkGray"
                 android:textSize="25sp" />
 
             <EditText
@@ -99,15 +80,28 @@
                 android:password="true"
                 android:singleLine="true"
                 android:textColor="@color/Black"
-                android:textColorHint="@color/DarkGray"
                 android:textSize="25sp" />
         </LinearLayout>
+
+        <Button
+            android:id="@+id/newUserCancel"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/button_config"
+            android:text="Exit"
+            android:textColor="@drawable/button_text_color2"
+            android:textSize="25sp" />
 
         <Button
             android:id="@+id/newUserConfirm"
             android:layout_width="140dp"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/RelativeLayout01"
+            android:layout_alignBaseline="@+id/newUserCancel"
+            android:layout_alignBottom="@+id/newUserCancel"
             android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"
             android:background="@drawable/button_config"
@@ -115,18 +109,4 @@
             android:textColor="@drawable/button_text_color2"
             android:textSize="25sp" />
 
-        <Button
-            android:id="@+id/newUserCancel"
-            android:layout_width="140dp"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/RelativeLayout01"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/button_config"
-            android:text="Exit"
-            android:textColor="@drawable/button_text_color2"
-            android:textSize="25sp" />
-
     </RelativeLayout>
-
-</ScrollView>
