--- a/EverywhereHouseController/res/layout/main_menu_view.xml
+++ b/EverywhereHouseController/res/layout/main_menu_view.xml
@@ -96,36 +96,12 @@
 	            android:layout_height="match_parent" >
 
 	            <Button
-	                android:id="@+id/buttonProfile"
-	                android:layout_width="wrap_content"
-	                android:layout_height="70dp"
-	                android:layout_alignLeft="@+id/buttonEvents"
-	                android:layout_alignParentRight="true"
-	                android:layout_alignTop="@+id/buttonConfig"
-	                android:background="@drawable/button_config2"
-	                android:text="Profile"
-	                android:textColor="@drawable/button_text_color3"
-	                android:textSize="20sp" />
-
-	            <Button
-	                android:id="@+id/buttonEvents"
-	                android:layout_width="120dp"
-	                android:layout_height="70dp"
-	                android:layout_alignBaseline="@+id/buttonManagement"
-	                android:layout_alignBottom="@+id/buttonManagement"
-	                android:layout_alignParentRight="true"
-	                android:background="@drawable/button_config2"
-	                android:text="Tasks"
-	                android:textColor="@drawable/button_text_color3"
-	                android:textSize="20sp" />
-
-	            <Button
 	                android:id="@+id/buttonManagement"
 	                android:layout_width="wrap_content"
 	                android:layout_height="70dp"
 	                android:layout_alignParentLeft="true"
+	                android:layout_alignParentRight="true"
 	                android:layout_alignParentTop="true"
-	                android:layout_marginTop="72dp"
 	                android:background="@drawable/button_config2"
 	                android:text="Management"
 	                android:textColor="@drawable/button_text_color3"
@@ -135,13 +111,26 @@
 	                android:id="@+id/buttonConfig"
 	                android:layout_width="wrap_content"
 	                android:layout_height="70dp"
+	                android:layout_alignParentBottom="true"
 	                android:layout_alignParentLeft="true"
-	                android:layout_below="@+id/buttonManagement"
-	                android:layout_marginTop="18dp"
+	                android:layout_alignParentRight="true"
 	                android:background="@drawable/button_config2"
 	                android:text="Configuration"
 	                android:textColor="@drawable/button_text_color3"
 	                android:textSize="20sp" />
+
+	            <Button
+	                android:id="@+id/buttonEvents"
+	                android:layout_width="120dp"
+	                android:layout_height="70dp"
+	                android:layout_alignParentLeft="true"
+	                android:layout_alignParentRight="true"
+	                android:layout_centerVertical="true"
+	                android:background="@drawable/button_config2"
+	                android:text="Tasks"
+	                android:textColor="@drawable/button_text_color3"
+	                android:textSize="20sp" />
+
 	        </RelativeLayout>
 	    </LinearLayout>
 
