--- a/EverywhereHouseController/res/layout-small/create_user.xml
+++ b/EverywhereHouseController/res/layout-small/create_user.xml
@@ -84,7 +84,7 @@
         <Button
             android:id="@+id/newUserConfirm"
             android:layout_width="140dp"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/newUserCancel"
             android:layout_alignBottom="@+id/newUserCancel"
             android:layout_alignParentRight="true"
@@ -92,12 +92,12 @@
             android:background="@drawable/button_config"
             android:text="Confirm"
             android:textColor="@drawable/button_text_color2"
-            android:textSize="20sp" />
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/newUserCancel"
             android:layout_width="140dp"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_marginBottom="5dp"
@@ -105,6 +105,6 @@
             android:background="@drawable/button_config"
             android:text="Exit"
             android:textColor="@drawable/button_text_color2"
-            android:textSize="20sp" />
+            android:textSize="10sp" />
 
     </RelativeLayout>
