--- a/EverywhereHouseController/res/layout/houses_menu_view.xml
+++ b/EverywhereHouseController/res/layout/houses_menu_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/LinearLayout1"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -10,14 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="138dp" >
 
-        <ImageView
-            android:id="@+id/imageView"
+        <ImageButton
+            android:id="@+id/HouseImageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
+            android:background="@color/GreenApp"
             android:src="@drawable/white_house_icon" />
 
         <CheckBox
@@ -25,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/imageView" />
+            android:layout_toRightOf="@+id/HouseImageButton" />
 
     </RelativeLayout>
 
